[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/scenes/menu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/8ope/8ope_basic.tres" type="DynamicFont" id=2]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="StartButton" type="ToolButton" parent="."]
margin_left = 270.0
margin_top = 222.0
margin_right = 360.0
margin_bottom = 262.0
custom_colors/font_color_focus = Color( 1, 1, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 2 )
shortcut_in_tooltip = false
action_mode = 0
button_mask = 0
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeleteButton" type="ToolButton" parent="."]
margin_left = 264.0
margin_top = 268.0
margin_right = 370.0
margin_bottom = 307.0
custom_colors/font_color_focus = Color( 1, 1, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 2 )
shortcut_in_tooltip = false
action_mode = 0
button_mask = 0
text = "Delete"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="ToolButton" parent="."]
margin_left = 277.0
margin_top = 309.0
margin_right = 351.0
margin_bottom = 349.0
custom_colors/font_color_focus = Color( 1, 1, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 2 )
shortcut_in_tooltip = false
action_mode = 0
button_mask = 0
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameTest" type="LineEdit" parent="."]
margin_left = 199.0
margin_top = 123.0
margin_right = 416.0
margin_bottom = 188.0
custom_fonts/font = ExtResource( 2 )

[node name="FileName" type="Label" parent="."]
margin_left = 112.0
margin_top = 57.0
margin_right = 334.0
margin_bottom = 88.0
custom_fonts/font = ExtResource( 2 )
text = "Not file found"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileLove" type="Label" parent="."]
margin_left = 405.0
margin_top = 57.0
margin_right = 467.0
margin_bottom = 88.0
custom_fonts/font = ExtResource( 2 )
text = "LV 0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="focus_entered" from="StartButton" to="." method="_on_focus_entered"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="focus_entered" from="DeleteButton" to="." method="_on_focus_entered"]
[connection signal="pressed" from="DeleteButton" to="." method="_on_DeleteButton_pressed"]
[connection signal="focus_entered" from="ExitButton" to="." method="_on_focus_entered"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="text_changed" from="NameTest" to="." method="_on_NameTest_text_changed"]
